fonts: honor & present system defaults

previously we'd pretend that a missing value meant our "plasma-ish"
defaults would apply but that is utterly false. when no hitting is set,
no hinting is set. this can happen when the system default fontconfigs
don't set up any hinting.

BUG: 416140